# candle-patterns

./: .gitignore  README.md  pyproject.toml
candle_patterns/: __init__.py  abcd.py  base.py  bull_flag.py  micro_pullback.py  news_momentum.py  opening_range_retest.py  parabolic_exhaustion.py  reversal.py  vwap_bounce.py  vwap_break.py
candle_patterns/indicators/: __init__.py  atr.py  ema.py  macd.py  rvol.py  trend_confirmation.py  vwap.py
candle_patterns/trailing/: __init__.py  atr.py  base.py  swing_low.py
tests/: __init__.py  test_abcd.py  test_abcd_completion.py  test_bull_flag.py  test_micro_pullback.py  test_news_momentum.py  test_orb_filters.py  test_orb_filters_exhaustive.py  test_orb_rules_new.py  test_parabolic_exhaustion.py  test_patterns.py  test_reversal.py  test_stop_buffers.py  test_trailing_stop.py  test_trend_confirmation.py  test_vwap_bounce.py  test_vwap_sort.py
tests/fixtures/: __init__.py  abcd_fixtures.py  bull_flag_fixtures.py  exit_signal_fixtures.py  micro_pullback_fixtures.py  opening_range_retest_fixtures.py  parabolic_exhaustion_fixtures.py  reversal_fixtures.py  trailing_stop_fixtures.py  vwap_bounce_fixtures.py  vwap_break_fixtures.py
tests/trailing/: __init__.py  test_atr.py  test_swing_low.py
